--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.11</version>
+        <version>2.7.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>pro.sky</groupId>
     <artifactId>hw_2_11</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>hw_2_11</name>
-    <description>hw_2_11</description>
+    <name>hw-2.11</name>
+    <description>hw-2.11</description>
     <properties>
         <java.version>11</java.version>
     </properties>
